--- a/css/evaluacion.css
+++ b/css/evaluacion.css
@@ -1,3 +1,20 @@
 body {
     background-color: pink;
+    text-align: center;
+}
+
+.cabeza{
+    background-color: black;
+    margin-top: -10px;
+    margin: -10px;
+    width: 2000px;
+    height: 100px;
+}
+
+.cabeza h1{
+    color: white;
+    text-align: left;
+    margin-left: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
 }
