--- a/css/evaluacion.css
+++ b/css/evaluacion.css
@@ -7,7 +7,7 @@ body {
     background-color: black;
     margin-top: -10px;
     margin: -10px;
-    width: 2000px;
+    width: 1950px;
     height: 100px;
 }
 
@@ -17,4 +17,28 @@ body {
     margin-left: 15px;
     font-family: Arial, Helvetica, sans-serif;
     position: absolute;
+}
+
+.container1 {
+    margin-top: 10px;
+    margin-left: -10px;
+
+}
+
+.container1 h1{
+    position: absolute;
+    top:10%;
+    right: 55%;
+    color: white;
+    font-size: 100px;
+    font-family:Arial, Helvetica, sans-serif
+}
+
+.container1 p{
+    position: absolute;
+    top:70%;
+    right: 62%;
+    color: white;
+    font-size: 20px;
+    font-family:Arial, Helvetica, sans-serif
 }
