--- a/css/evaluacion.css
+++ b/css/evaluacion.css
@@ -1,5 +1,4 @@
 body {
-    background-color: pink;
     text-align: center;
 }
 
@@ -43,6 +42,9 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
+.container2 h3{
+    color: rgb(47, 219, 219);
+}
 
 .container2{
     margin-top: 40px;
@@ -56,6 +58,17 @@ body {
 }
 
 
-.container3 {
-    margin-right: 30px;
+.container3 img{
+    display: inline-block;
+    margin-top: 50px;
+    margin-right: 20px;
+}
+
+.button1 button{
+    margin-top: 50px;
+    color: white;
+    border-color: rgb(47, 219, 219);
+    background-color: rgb(47, 219, 219);
+    width: 200px;
+    height: 50px;
 }
